Fixed the hot topics align issues

--- a/src/styles/searchBar.css
+++ b/src/styles/searchBar.css
@@ -123,7 +123,7 @@
   position: relative;
   height: 1.2em;
   font-weight: bold;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   width: 90%;
 }
 
